--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,10 @@ dependencies:
     sdk: flutter
   flutter_svg: 2.0.7
   provider: ^6.0.5
-  intl: ^0.17.0
   cupertino_icons: ^1.0.6
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 dev_dependencies:
   flutter_test:
